--- a/RemoteConsole.Client/RemoteConsole.Client.csproj
+++ b/RemoteConsole.Client/RemoteConsole.Client.csproj
@@ -57,6 +57,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RemoteConsole.Core\RemoteConsole.Core.csproj">
+      <Project>{eaa725a0-3f2f-40e6-a291-5e6416550c2a}</Project>
+      <Name>RemoteConsole.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
