--- a/RemoteConsole.Server/RemoteConsole.Server.csproj
+++ b/RemoteConsole.Server/RemoteConsole.Server.csproj
@@ -82,6 +82,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\ShellCommandController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShellCommandController.cs" />
